增加单独的设置界面